Fix overlapping

--- a/src/app/components-mobile/title-mobile/title-mobile.component.scss
+++ b/src/app/components-mobile/title-mobile/title-mobile.component.scss
@@ -1,24 +1,25 @@
-.label-header {
-    font-family: 'Proxima Nova';
-    font-size: 2rem;
-    font-weight: bold;
-    line-height: 2rem;
-    color: #5e17eb;
-    margin: 0;
+ion-header ion-toolbar {
+    --border-width: 0;
+    padding-top: 1rem;
+    --background: white;
 }
 
-* {
-    --background:  rgb(255, 255, 255);
-}
-
-ion-img {
-    size: 30px;
-    color:rgb(0, 0, 0);
-    padding: 5px;
-}
-
-.back-btn ion-icon{
+ion-header ion-toolbar ion-title {
+    --color: #5e17eb;
+    font-family: "Proxima Nova";
     font-size: 24px;
-    border: 1px solid #ccc;
-    padding: 10px;
+}
+
+ion-header ion-toolbar ion-button {
+    --color: 000;
+}
+
+ion-header ion-toolbar ion-button img {
+    height: 28.05px;
+    aspect-ratio: 1/1;
+    padding: 0 !important;
+}
+
+.purple{
+    color: #ab62c2
 }
